--- a/css/style.css
+++ b/css/style.css
@@ -6,3 +6,66 @@ Medium green: #55c57a
 Dark green: #28b485
 
 */
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: 'Lato', sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.7;
+  color: #777;
+  padding: 30px;
+}
+
+.header {
+  height: 95vh;
+  background-image: linear-gradient(
+      to bottom right,
+      rgba(126, 213, 111, 0.8),
+      rgba(40, 180, 133, 0.8)
+    ),
+    url('../img/hero.jpg');
+  background-size: cover;
+  background-position: top;
+
+  clip-path: polygon(0 0, 100% 0, 100% 75%, 0 100%);
+}
+
+.logo-container {
+  position: absolute;
+  top: 60px;
+  left: 60px;
+}
+
+.logo-container img {
+  height: 35px;
+}
+
+.heading-box {
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.heading {
+  color: white;
+  text-align: center;
+}
+
+.heading .primary {
+  display: block;
+  font-weight: 400;
+  font-size: 60px;
+  letter-spacing: 35px;
+}
+.heading .sub {
+  display: block;
+  font-weight: 700;
+  font-size: 20px;
+  letter-spacing: 17.5px;
+}
