--- a/css/style.css
+++ b/css/style.css
@@ -51,12 +51,13 @@ body {
   top: 40%;
   left: 50%;
   transform: translate(-50%, -50%);
+  text-align: center;
 }
 .heading {
   color: white;
-  text-align: center;
 
   backface-visibility: hidden;
+  margin-bottom: 60px;
 }
 
 .heading .primary {
@@ -81,11 +82,11 @@ body {
     transform: translateX(-100px);
     opacity: 0;
   }
-  
+
   80% {
     transform: translateX(10px);
   }
-  
+
   100% {
     transform: translate(0);
     opacity: 1;
@@ -97,11 +98,53 @@ body {
     transform: translateX(100px);
     opacity: 0;
   }
-  
+
   80% {
     transform: translateX(-10px);
   }
-  
+
+  100% {
+    transform: translate(0);
+    opacity: 1;
+  }
+}
+
+.btn:link,
+.btn:visited {
+  text-transform: uppercase;
+  text-decoration: none;
+  padding: 15px 40px;
+  display: inline-block;
+  border-radius: 100px;
+  transition: all .2s;
+}
+
+.btn:hover {
+  transform: translateY(-3px);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+}
+
+.btn:active {
+  transform: translateY(-1px);
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+}
+
+.btn-white {
+  background-color: white;
+  color: #777;
+}
+
+.btn-animate {
+  animation: slideUp .5s ease-out 0.75s;
+  animation-fill-mode: backwards;
+}
+
+@keyframes slideUp {
+  0% {
+    transform: translateY(30px);
+    opacity: 0;
+  }
+
   100% {
     transform: translate(0);
     opacity: 1;
