--- a/css/style.css
+++ b/css/style.css
@@ -7,19 +7,25 @@ Dark green: #28b485
 
 */
 
-* {
+*,
+*::before,
+*::after {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
+html {
+  font-size: 62.5%;
+}
+
 body {
   font-family: 'Lato', sans-serif;
-  font-size: 16px;
+  /* font-size: 16px; */
   font-weight: 400;
   line-height: 1.7;
   color: #777;
-  padding: 30px;
+  padding: 3rem;
 }
 
 .header {
@@ -38,12 +44,12 @@ body {
 
 .logo-container {
   position: absolute;
-  top: 60px;
-  left: 60px;
+  top: 6rem;
+  left: 6rem;
 }
 
 .logo-container img {
-  height: 35px;
+  height: 3.5rem;
 }
 
 .heading-box {
@@ -57,34 +63,34 @@ body {
   color: white;
 
   backface-visibility: hidden;
-  margin-bottom: 60px;
+  margin-bottom: 6rem;
 }
 
 .heading .primary {
   display: block;
   font-weight: 400;
-  font-size: 60px;
-  letter-spacing: 35px;
+  font-size: 6rem;
+  letter-spacing: 3.5rem;
 
   animation: slideLeft 1s ease-in-out;
 }
 .heading .sub {
   display: block;
   font-weight: 700;
-  font-size: 20px;
-  letter-spacing: 17.5px;
+  font-size: 2rem;
+  letter-spacing: 1.75rem;
 
   animation: slideRight 1s ease-in-out;
 }
 
 @keyframes slideLeft {
   0% {
-    transform: translateX(-100px);
+    transform: translateX(-10rem);
     opacity: 0;
   }
 
   80% {
-    transform: translateX(10px);
+    transform: translateX(1rem);
   }
 
   100% {
@@ -95,12 +101,12 @@ body {
 
 @keyframes slideRight {
   0% {
-    transform: translateX(100px);
+    transform: translateX(10rem);
     opacity: 0;
   }
 
   80% {
-    transform: translateX(-10px);
+    transform: translateX(-1rem);
   }
 
   100% {
@@ -113,20 +119,20 @@ body {
 .btn:visited {
   text-transform: uppercase;
   text-decoration: none;
-  padding: 15px 40px;
+  padding: 1.5rem 4rem;
   display: inline-block;
-  border-radius: 100px;
+  border-radius: 10rem;
   transition: all .2s;
 }
 
 .btn:hover {
-  transform: translateY(-3px);
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+  transform: translateY(-.3rem);
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
 }
 
 .btn:active {
-  transform: translateY(-1px);
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+  transform: translateY(-.1rem);
+  box-shadow: 0 .5rem 1rem rgba(0, 0, 0, 0.2);
 }
 
 .btn-white {
@@ -141,7 +147,7 @@ body {
 
 @keyframes slideUp {
   0% {
-    transform: translateY(30px);
+    transform: translateY(3rem);
     opacity: 0;
   }
 
