--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,81 +1,116 @@
+$color-primary: #55c57a;
+$color-primary-light: #7ed56f;
+$color-primary-dark: #28b485;
+$color-grey: #777;
+$color-white: #fff;
+
 *,
 *::before,
 *::after {
   margin: 0;
   padding: 0;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+}
 
 html {
-  font-size: 62.5%; }
+  font-size: 62.5%;
+}
 
 body {
   font-family: 'Lato', sans-serif;
   /* font-size: 16px; */
   font-weight: 400;
   line-height: 1.7;
-  color: #777;
-  padding: 3rem; }
+  color: $color-grey;
+  padding: 3rem;
+}
 
 .header {
   height: 95vh;
-  background-image: linear-gradient(to bottom right, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url("../img/hero.jpg");
+  background-image: linear-gradient(
+      to bottom right,
+      rgba($color-primary-light, 0.8),
+      rgba($color-primary-dark, 0.8)
+    ),
+    url('../img/hero.jpg');
   background-size: cover;
   background-position: top;
-  clip-path: polygon(0 0, 100% 0, 100% 75%, 0 100%); }
+
+  clip-path: polygon(0 0, 100% 0, 100% 75%, 0 100%);
+}
 
 .logo-container {
   position: absolute;
   top: 6rem;
-  left: 6rem; }
+  left: 6rem;
+}
 
 .logo-container img {
-  height: 3.5rem; }
+  height: 3.5rem;
+}
 
 .heading-box {
   position: absolute;
   top: 40%;
   left: 50%;
   transform: translate(-50%, -50%);
-  text-align: center; }
-
+  text-align: center;
+}
 .heading {
-  color: #fff;
+  color: $color-white;
+
   backface-visibility: hidden;
-  margin-bottom: 6rem; }
+  margin-bottom: 6rem;
+}
 
 .heading .primary {
   display: block;
   font-weight: 400;
   font-size: 6rem;
   letter-spacing: 3.5rem;
-  animation: slideLeft 1s ease-in-out; }
 
+  animation: slideLeft 1s ease-in-out;
+}
 .heading .sub {
   display: block;
   font-weight: 700;
   font-size: 2rem;
   letter-spacing: 1.75rem;
-  animation: slideRight 1s ease-in-out; }
+
+  animation: slideRight 1s ease-in-out;
+}
 
 @keyframes slideLeft {
   0% {
     transform: translateX(-10rem);
-    opacity: 0; }
+    opacity: 0;
+  }
+
   80% {
-    transform: translateX(1rem); }
+    transform: translateX(1rem);
+  }
+
   100% {
     transform: translate(0);
-    opacity: 1; } }
+    opacity: 1;
+  }
+}
 
 @keyframes slideRight {
   0% {
     transform: translateX(10rem);
-    opacity: 0; }
+    opacity: 0;
+  }
+
   80% {
-    transform: translateX(-1rem); }
+    transform: translateX(-1rem);
+  }
+
   100% {
     transform: translate(0);
-    opacity: 1; } }
+    opacity: 1;
+  }
+}
 
 .btn:link,
 .btn:visited {
@@ -85,28 +120,37 @@ body {
   padding: 1.5rem 4rem;
   display: inline-block;
   border-radius: 10rem;
-  transition: all 0.2s; }
+  transition: all 0.2s;
+}
 
 .btn:hover {
   transform: translateY(-0.3rem);
-  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2); }
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
+}
 
 .btn:active {
   transform: translateY(-0.1rem);
-  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2); }
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
+}
 
 .btn-white {
-  background-color: #fff;
-  color: #777; }
+  background-color: $color-white;
+  color: $color-grey;
+}
 
 .btn-animate {
   animation: slideUp 0.5s ease-out 0.75s;
-  animation-fill-mode: backwards; }
+  animation-fill-mode: backwards;
+}
 
 @keyframes slideUp {
   0% {
     transform: translateY(3rem);
-    opacity: 0; }
+    opacity: 0;
+  }
+
   100% {
     transform: translate(0);
-    opacity: 1; } }
+    opacity: 1;
+  }
+}
