--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,158 +1,14 @@
-$color-primary: #55c57a;
-$color-primary-light: #7ed56f;
-$color-primary-dark: #28b485;
-$color-grey: #777;
-$color-white: #fff;
-$color-black: #000;
+@import 'abstracts/functions';
+@import 'abstracts/mixins';
+@import 'abstracts/variables';
 
-*,
-*::before,
-*::after {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
+@import 'base/animations';
+@import 'base/base';
+@import 'base/typography';
+@import 'base/utilities';
 
-html {
-  font-size: 62.5%;
-}
+@import 'components/buttons';
 
-body {
-  font-family: 'Lato', sans-serif;
-  /* font-size: 16px; */
-  font-weight: 400;
-  line-height: 1.7;
-  color: $color-grey;
-  padding: 3rem;
-}
+@import 'layout/header';
 
-.header {
-  height: 95vh;
-  background-image: linear-gradient(
-      to bottom right,
-      rgba($color-primary-light, 0.8),
-      rgba($color-primary-dark, 0.8)
-    ),
-    url('../img/hero.jpg');
-  background-size: cover;
-  background-position: top;
-
-  clip-path: polygon(0 0, 100% 0, 100% 75%, 0 100%);
-}
-
-.logo-container {
-  position: absolute;
-  top: 6rem;
-  left: 6rem;
-
-  img {
-    height: 3.5rem;
-  }
-}
-.heading-box {
-  position: absolute;
-  top: 40%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
-}
-.heading {
-  color: $color-white;
-
-  backface-visibility: hidden;
-  margin-bottom: 6rem;
-
-  .primary {
-    display: block;
-    font-weight: 400;
-    font-size: 6rem;
-    letter-spacing: 3.5rem;
-
-    animation: slideLeft 1s ease-in-out;
-  }
-  .sub {
-    display: block;
-    font-weight: 700;
-    font-size: 2rem;
-    letter-spacing: 1.75rem;
-
-    animation: slideRight 1s ease-in-out;
-  }
-}
-
-@keyframes slideLeft {
-  0% {
-    transform: translateX(-10rem);
-    opacity: 0;
-  }
-
-  80% {
-    transform: translateX(1rem);
-  }
-
-  100% {
-    transform: translate(0);
-    opacity: 1;
-  }
-}
-
-@keyframes slideRight {
-  0% {
-    transform: translateX(10rem);
-    opacity: 0;
-  }
-
-  80% {
-    transform: translateX(-1rem);
-  }
-
-  100% {
-    transform: translate(0);
-    opacity: 1;
-  }
-}
-
-.btn {
-  &:link,
-  &:visited {
-    font-size: 1.5rem;
-    text-transform: uppercase;
-    text-decoration: none;
-    padding: 1.5rem 4rem;
-    display: inline-block;
-    border-radius: 10rem;
-    transition: all 0.2s;
-  }
-
-  &:hover {
-    transform: translateY(-0.3rem);
-    box-shadow: 0 1rem 2rem rgba($color-black, 0.2);
-  }
-
-  &:active {
-    transform: translateY(-0.1rem);
-    box-shadow: 0 0.5rem 1rem rgba($color-black, 0.2);
-  }
-
-  &-white {
-    background-color: $color-white;
-    color: $color-grey;
-  }
-
-  &-animate {
-    animation: slideUp 0.5s ease-out 0.75s;
-    animation-fill-mode: backwards;
-  }
-}
-
-@keyframes slideUp {
-  0% {
-    transform: translateY(3rem);
-    opacity: 0;
-  }
-
-  100% {
-    transform: translate(0);
-    opacity: 1;
-  }
-}
+@import 'pages/home';
