--- a/css/style.css
+++ b/css/style.css
@@ -68,6 +68,27 @@ body {
     letter-spacing: 1.75rem;
     animation: slideRight 1s ease-in-out; }
 
+.heading-secondary {
+  font-size: 3.5rem;
+  text-transform: uppercase;
+  font-weight: 700;
+  display: inline-block;
+  background-image: linear-gradient(to right, #7ed56f, #28b485);
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+  transition: all 0.2s;
+  letter-spacing: 0.2rem; }
+  .heading-secondary:hover {
+    transform: skewX(15deg) skewy(2deg) scale(1.1);
+    text-shadow: 0.5rem 1rem 2rem rgba(0, 0, 0, 0.2); }
+
+.text-center {
+  text-align: center; }
+
+.mb-8 {
+  margin-bottom: 8rem; }
+
 .btn:link, .btn:visited {
   font-size: 1.5rem;
   text-transform: uppercase;
@@ -109,7 +130,6 @@ body {
 
 .row {
   min-width: 114rem;
-  background-color: #777;
   margin: 0 auto;
   content: '';
   display: table;
@@ -117,7 +137,6 @@ body {
   .row:not(:last-child) {
     margin-bottom: 8rem; }
   .row [class^='col-'] {
-    background-color: orangered;
     float: left; }
     .row [class^='col-']:not(:last-child) {
       margin-right: 6rem; }
@@ -133,3 +152,8 @@ body {
     width: calc( 2 * ((100% - 3 * 6rem) / 4) + 6rem); }
   .row .col-3-of-4 {
     width: calc( 3 * ((100% - 3 * 6rem) / 4) + 2 * 6rem); }
+
+.section-about {
+  background-color: #f7f7f7;
+  padding: 25rem 0;
+  margin-top: -20vh; }
