--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -1,6 +1,22 @@
 .text-center {
-    text-align: center;
+  text-align: center;
 }
-.mb-8 {
-    margin-bottom: 8rem;
+.mb-sm {
+  margin-bottom: 2rem;
+}
+.mb-md {
+  margin-bottom: 4rem;
+}
+.mb-lg {
+  margin-bottom: 8rem;
+}
+
+.mt-sm {
+  margin-top: 2rem;
+}
+.mt-md {
+  margin-top: 4rem;
+}
+.mt-lg {
+  margin-top: 8rem;
 }
