--- a/css/style.css
+++ b/css/style.css
@@ -158,6 +158,23 @@ body {
   transform: translateY(-0.1rem);
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2); }
 
+.composition {
+  position: relative; }
+  .composition__image {
+    width: 55%;
+    position: absolute;
+    box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.4);
+    border-radius: 2px; }
+    .composition__image--p1 {
+      top: -2rem;
+      left: 0; }
+    .composition__image--p2 {
+      top: 2rem;
+      right: 0; }
+    .composition__image--p3 {
+      top: 10rem;
+      left: 20%; }
+
 .header {
   height: 95vh;
   background-image: linear-gradient(to bottom right, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url("../img/hero.jpg");
