feat: composition img effects

--- a/css/style.css
+++ b/css/style.css
@@ -164,7 +164,10 @@ body {
     width: 55%;
     position: absolute;
     box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.4);
-    border-radius: 2px; }
+    border-radius: 2px;
+    z-index: 1;
+    outline-offset: 1rem;
+    transition: all 0.2s; }
     .composition__image--p1 {
       top: -2rem;
       left: 0; }
@@ -174,6 +177,14 @@ body {
     .composition__image--p3 {
       top: 10rem;
       left: 20%; }
+    .composition__image:hover {
+      outline: 1rem solid #55c57a;
+      scale: 1.05;
+      box-shadow: 0 2.5rem 4rem rgba(0, 0, 0, 0.5);
+      translate: 0 -.5rem;
+      z-index: 2; }
+  .composition:hover .composition__image:not(:hover) {
+    scale: 0.95; }
 
 .header {
   height: 95vh;
