--- a/sass/components/_composition.scss
+++ b/sass/components/_composition.scss
@@ -6,6 +6,9 @@
     position: absolute;
     box-shadow: 0 1.5rem 4rem rgba($color-black, 0.4);
     border-radius: 2px;
+    z-index: 1;
+    outline-offset: 1rem;
+    transition: all 0.2s;
 
     &--p1 {
       top: -2rem;
@@ -19,5 +22,17 @@
       top: 10rem;
       left: 20%;
     }
+
+    &:hover {
+      outline: 1rem solid $color-primary;
+      scale: 1.05;
+      box-shadow: 0 2.5rem 4rem rgba($color-black, 0.5);
+      translate: 0 -.5rem;
+      z-index: 2;
+    }
+  }
+
+  &:hover &__image:not(:hover) {
+    scale: 0.95;
   }
 }
