feat: card rotating

--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -22,3 +22,9 @@
     margin-inline: 30rem;
   }
 }
+
+.section-tours {
+  background-color: $color-grey-light;
+  padding: 35rem 0;
+  margin-top: -25vh;
+}
