--- a/css/style.css
+++ b/css/style.css
@@ -164,8 +164,6 @@ body {
   position: relative;
   height: 50rem; }
   .card__side {
-    font-size: 2rem;
-    color: white;
     height: 50rem;
     transition: all 0.8s ease;
     position: absolute;
@@ -173,7 +171,10 @@ body {
     left: 0;
     width: 100%;
     height: 50rem;
-    backface-visibility: hidden; }
+    backface-visibility: hidden;
+    border-radius: 1rem;
+    box-shadow: 0 1.5rem 3rem rgba(0, 0, 0, 0.2);
+    overflow: hidden; }
     .card__side--front {
       background-color: #fff; }
     .card__side--back {
@@ -185,9 +186,44 @@ body {
       .card__side--back-3 {
         background-image: linear-gradient(to bottom right, #2998ff, #5643fa); }
   .card:hover .card__side--front {
-    transform: rotateY(180deg); }
+    transform: rotateY(-180deg); }
   .card:hover .card__side--back {
     transform: rotateY(0deg); }
+  .card__picture {
+    background-size: cover;
+    height: 25rem;
+    -webkit-background-blend-mode: screen;
+    background-blend-mode: screen;
+    clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%); }
+    .card__picture--1 {
+      background-image: linear-gradient(to bottom right, #ffb900, #ff7730), url("../img/nat-5.jpg"); }
+  .card__heading {
+    font-size: 2.8rem;
+    font-weight: 300;
+    text-align: right;
+    text-transform: uppercase;
+    color: #fff;
+    position: absolute;
+    top: 12rem;
+    right: 2rem;
+    width: 75%; }
+  .card__heading-span {
+    padding: 1rem 1.5rem;
+    -webkit-box-decoration-break: clone;
+    box-decoration-break: clone; }
+    .card__heading-span--1 {
+      background-image: linear-gradient(to bottom right, rgba(255, 185, 0, 0.8), rgba(255, 119, 48, 0.8)); }
+  .card__details ul {
+    list-style-type: none;
+    margin: 0 auto;
+    width: 80%; }
+    .card__details ul li {
+      font-size: 1.5rem;
+      text-align: center;
+      padding: 1rem; }
+      .card__details ul li:not(:last-child) {
+        border-bottom: 2px solid #f7f7f7; }
 
 .composition {
   position: relative; }
@@ -240,6 +276,7 @@ body {
   background-image: linear-gradient(to bottom right, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url("../img/hero.jpg");
   background-size: cover;
   background-position: top;
+  -webkit-clip-path: polygon(0 0, 100% 0, 100% 75%, 0 100%);
   clip-path: polygon(0 0, 100% 0, 100% 75%, 0 100%); }
 
 .logo-container {
