--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -3,10 +3,8 @@
   -moz-perspective: 150rem;
   position: relative;
   height: 50rem;
-  
+
   &__side {
-    font-size: 2rem;
-    color: white;
     height: 50rem;
     transition: all 0.8s ease;
     position: absolute;
@@ -15,6 +13,9 @@
     width: 100%;
     height: 50rem;
     backface-visibility: hidden;
+    border-radius: 1rem;
+    box-shadow: 0 1.5rem 3rem rgba($color: $color-black, $alpha: 0.2);
+    overflow: hidden;
 
     &--front {
       background-color: $color-white;
@@ -22,23 +23,96 @@
 
     &--back {
       transform: rotateY(180deg);
-      
+
       &-1 {
-        background-image: linear-gradient(to bottom right, $color-secondary-light, $color-secondary-dark);
+        background-image: linear-gradient(
+          to bottom right,
+          $color-secondary-light,
+          $color-secondary-dark
+        );
       }
       &-2 {
-        background-image: linear-gradient(to bottom right, $color-primary-light, $color-primary-dark);
+        background-image: linear-gradient(
+          to bottom right,
+          $color-primary-light,
+          $color-primary-dark
+        );
       }
       &-3 {
-        background-image: linear-gradient(to bottom right, $color-tertiary-light, $color-tertiary-dark);
+        background-image: linear-gradient(
+          to bottom right,
+          $color-tertiary-light,
+          $color-tertiary-dark
+        );
       }
     }
   }
   &:hover &__side--front {
-    transform: rotateY(180deg);
+    transform: rotateY(-180deg);
   }
 
   &:hover &__side--back {
     transform: rotateY(0deg);
+  }
+
+  &__picture {
+    background-size: cover;
+    height: 25rem;
+    -webkit-background-blend-mode: screen;
+    background-blend-mode: screen;
+    clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
+
+    &--1 {
+      background-image: linear-gradient(
+          to bottom right,
+          $color-secondary-light,
+          $color-secondary-dark
+        ),
+        url("../img/nat-5.jpg");
+    }
+  }
+
+  &__heading {
+    font-size: 2.8rem;
+    font-weight: 300;
+    text-align: right;
+    text-transform: uppercase;
+    color: $color-white;
+    position: absolute;
+    top: 12rem;
+    right: 2rem;
+    width: 75%;
+  }
+
+  &__heading-span {
+    padding: 1rem 1.5rem;
+    -webkit-box-decoration-break: clone;
+    box-decoration-break: clone;
+
+    &--1 {
+      background-image: linear-gradient(
+        to bottom right,
+        rgba($color-secondary-light, 0.8),
+        rgba($color-secondary-dark, 0.8)
+      );
+    }
+  }
+
+  &__details {
+    ul {
+      list-style-type: none;
+      margin: 0 auto;
+      width: 80%;
+      li {
+        font-size: 1.5rem;
+        text-align: center;
+        padding: 1rem;
+
+        &:not(:last-child) {
+          border-bottom: 2px solid $color-grey-light;
+        }
+      }
+    }
   }
 }
