--- a/css/style.css
+++ b/css/style.css
@@ -135,6 +135,10 @@ body {
   background-color: #fff;
   color: #777; }
 
+.btn-primary {
+  background-color: #55c57a;
+  color: #fff; }
+
 .btn-animate {
   animation: slideUp 0.5s ease-out 0.75s;
   animation-fill-mode: backwards; }
@@ -172,7 +176,7 @@ body {
     width: 100%;
     height: 50rem;
     backface-visibility: hidden;
-    border-radius: 1rem;
+    border-radius: 0.5rem;
     box-shadow: 0 1.5rem 3rem rgba(0, 0, 0, 0.2);
     overflow: hidden; }
     .card__side--front {
@@ -185,10 +189,6 @@ body {
         background-image: linear-gradient(to bottom right, #7ed56f, #28b485); }
       .card__side--back-3 {
         background-image: linear-gradient(to bottom right, #2998ff, #5643fa); }
-  .card:hover .card__side--front {
-    transform: rotateY(-180deg); }
-  .card:hover .card__side--back {
-    transform: rotateY(0deg); }
   .card__picture {
     background-size: cover;
     height: 25rem;
@@ -198,6 +198,10 @@ body {
     -webkit-clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%); }
     .card__picture--1 {
       background-image: linear-gradient(to bottom right, #ffb900, #ff7730), url("../img/nat-5.jpg"); }
+    .card__picture--2 {
+      background-image: linear-gradient(to bottom right, #7ed56f, #28b485), url("../img/nat-6.jpg"); }
+    .card__picture--3 {
+      background-image: linear-gradient(to bottom right, #2998ff, #5643fa), url("../img/nat-7.jpg"); }
   .card__heading {
     font-size: 2.8rem;
     font-weight: 300;
@@ -214,6 +218,10 @@ body {
     box-decoration-break: clone; }
     .card__heading-span--1 {
       background-image: linear-gradient(to bottom right, rgba(255, 185, 0, 0.8), rgba(255, 119, 48, 0.8)); }
+    .card__heading-span--2 {
+      background-image: linear-gradient(to bottom right, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)); }
+    .card__heading-span--3 {
+      background-image: linear-gradient(to bottom right, rgba(41, 152, 255, 0.8), rgba(86, 67, 250, 0.8)); }
   .card__details ul {
     list-style-type: none;
     margin: 0 auto;
@@ -224,6 +232,18 @@ body {
       padding: 1rem; }
       .card__details ul li:not(:last-child) {
         border-bottom: 2px solid #f7f7f7; }
+  .card__cta {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #fff;
+    text-align: center; }
+    .card__cta--only {
+      font-size: 2rem; }
+    .card__cta--price {
+      font-size: 6rem;
+      font-weight: 300; }
 
 .composition {
   position: relative; }
@@ -287,7 +307,7 @@ body {
     height: 3.5rem; }
 
 .row {
-  min-width: 114rem;
+  min-width: 118rem;
   margin: 0 auto;
   content: '';
   display: table;
@@ -329,5 +349,5 @@ body {
 
 .section-tours {
   background-color: #f7f7f7;
-  padding: 35rem 0;
+  padding: 35rem 0 10rem 0;
   margin-top: -25vh; }
