--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -24,6 +24,10 @@
     background-color: $color-white;
     color: $color-grey;
   }
+  &-primary {
+    background-color: $color-primary;
+    color: $color-white;
+  }
 
   &-animate {
     animation: slideUp 0.5s ease-out 0.75s;
