--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -13,7 +13,7 @@
     width: 100%;
     height: 50rem;
     backface-visibility: hidden;
-    border-radius: 1rem;
+    border-radius: 0.5rem;
     box-shadow: 0 1.5rem 3rem rgba($color: $color-black, $alpha: 0.2);
     overflow: hidden;
 
@@ -47,13 +47,13 @@
       }
     }
   }
-  &:hover &__side--front {
-    transform: rotateY(-180deg);
-  }
+  // &:hover &__side--front {
+  //   transform: rotateY(-180deg);
+  // }
 
-  &:hover &__side--back {
-    transform: rotateY(0deg);
-  }
+  // &:hover &__side--back {
+  //   transform: rotateY(0deg);
+  // }
 
   &__picture {
     background-size: cover;
@@ -70,6 +70,22 @@
           $color-secondary-dark
         ),
         url("../img/nat-5.jpg");
+    }
+    &--2 {
+      background-image: linear-gradient(
+          to bottom right,
+          $color-primary-light,
+          $color-primary-dark
+        ),
+        url("../img/nat-6.jpg");
+    }
+    &--3 {
+      background-image: linear-gradient(
+          to bottom right,
+          $color-tertiary-light,
+          $color-tertiary-dark
+        ),
+        url("../img/nat-7.jpg");
     }
   }
 
@@ -97,6 +113,20 @@
         rgba($color-secondary-dark, 0.8)
       );
     }
+    &--2 {
+      background-image: linear-gradient(
+        to bottom right,
+        rgba($color-primary-light, 0.8),
+        rgba($color-primary-dark, 0.8)
+      );
+    }
+    &--3 {
+      background-image: linear-gradient(
+        to bottom right,
+        rgba($color-tertiary-light, 0.8),
+        rgba($color-tertiary-dark, 0.8)
+      );
+    }
   }
 
   &__details {
@@ -113,6 +143,24 @@
           border-bottom: 2px solid $color-grey-light;
         }
       }
+    }
+  }
+
+  &__cta {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: $color-white;
+    text-align: center;
+
+    &--only {
+      font-size: 2rem;
+    }
+
+    &--price {
+      font-size: 6rem;
+      font-weight: 300;
     }
   }
 }
