--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -25,6 +25,6 @@
 
 .section-tours {
   background-color: $color-grey-light;
-  padding: 35rem 0;
+  padding: 35rem 0 10rem 0;
   margin-top: -25vh;
 }
