--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -47,13 +47,13 @@
       }
     }
   }
-  // &:hover &__side--front {
-  //   transform: rotateY(-180deg);
-  // }
+  &:hover &__side--front {
+    transform: rotateY(-180deg);
+  }
 
-  // &:hover &__side--back {
-  //   transform: rotateY(0deg);
-  // }
+  &:hover &__side--back {
+    transform: rotateY(0deg);
+  }
 
   &__picture {
     background-size: cover;
