--- a/css/style.css
+++ b/css/style.css
@@ -189,6 +189,10 @@ body {
         background-image: linear-gradient(to bottom right, #7ed56f, #28b485); }
       .card__side--back-3 {
         background-image: linear-gradient(to bottom right, #2998ff, #5643fa); }
+  .card:hover .card__side--front {
+    transform: rotateY(-180deg); }
+  .card:hover .card__side--back {
+    transform: rotateY(0deg); }
   .card__picture {
     background-size: cover;
     height: 25rem;
@@ -291,6 +295,31 @@ body {
   .feature-box:hover {
     transform: scale(1.05) translateY(-1.5rem); }
 
+.story {
+  background-color: #fff;
+  padding: 6rem;
+  padding-left: 9rem;
+  width: 60%;
+  margin: 0 auto;
+  border-radius: 0.5rem;
+  box-shadow: 0 3rem 6rem rgba(0, 0, 0, 0.1);
+  font-size: 1.6rem;
+  transform: skewX(-12deg); }
+  .story__shape {
+    width: 15rem;
+    height: 15rem;
+    float: left;
+    -webkit-clip-path: circle(50% at 50% 50%);
+    clip-path: circle(50% at 50% 50%);
+    -webkit-shape-outside: circle(50% at 50% 50%);
+    shape-outside: circle(50% at 50% 50%);
+    translate: -3rem 0;
+    transform: skewX(12deg); }
+  .story__img {
+    height: 100%; }
+  .story__text {
+    transform: skewX(12deg); }
+
 .header {
   height: 95vh;
   background-image: linear-gradient(to bottom right, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url("../img/hero.jpg");
@@ -351,3 +380,7 @@ body {
   background-color: #f7f7f7;
   padding: 35rem 0 10rem 0;
   margin-top: -25vh; }
+
+.section-stories {
+  background-color: #f7f7f7;
+  padding: 15rem 0; }
