--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -28,3 +28,7 @@
   padding: 35rem 0 10rem 0;
   margin-top: -25vh;
 }
+.section-stories {
+  background-color: $color-grey-light;
+  padding: 15rem 0;
+}
