--- a/css/style.css
+++ b/css/style.css
@@ -314,11 +314,32 @@ body {
     -webkit-shape-outside: circle(50% at 50% 50%);
     shape-outside: circle(50% at 50% 50%);
     translate: -3rem 0;
-    transform: skewX(12deg); }
+    transform: skewX(12deg);
+    position: relative; }
   .story__img {
-    height: 100%; }
+    height: 100%;
+    translate: -3.5rem 0;
+    transition: all 0.5s;
+    scale: 1.5; }
   .story__text {
     transform: skewX(12deg); }
+  .story__caption {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, 20%);
+    font-size: 1.7rem;
+    color: #fff;
+    text-transform: uppercase;
+    text-align: center;
+    opacity: 0;
+    transition: all 0.5s; }
+  .story:hover .story__caption {
+    opacity: 1;
+    transform: translate(-50%, -50%); }
+  .story:hover .story__img {
+    scale: 1;
+    filter: blur(3px) brightness(80%); }
 
 .header {
   height: 95vh;
