--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -20,13 +20,39 @@
     shape-outside: circle(50% at 50% 50%);
     translate: -3rem 0;
     transform: skewX(12deg);
+    position: relative;
   }
 
   &__img {
     height: 100%;
+    translate: -3.5rem 0;
+    transition: all 0.5s;
+    scale: 1.5;
   }
 
   &__text {
     transform: skewX(12deg);
+  }
+
+  &__caption {
+    position: absolute;
+    top:50%;
+    left:50%;
+    transform: translate(-50%, 20%);
+    font-size: 1.7rem;
+    color: $color-white;
+    text-transform: uppercase;
+    text-align: center;
+    opacity: 0;
+    transition: all 0.5s;
+  }
+  
+  &:hover &__caption {
+    opacity: 1;
+    transform: translate(-50%, -50%);
+  }
+  &:hover &__img {
+    scale: 1;
+    filter: blur(3px) brightness(80%);
   }
 }
