--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -29,6 +29,6 @@
   margin-top: -25vh;
 }
 .section-stories {
-  background-color: $color-grey-light;
+  position: relative;
   padding: 15rem 0;
 }
