--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -1,5 +1,5 @@
 .story {
-  background-color: $color-white;
+  background-color: rgba($color-white, 0.6);
   padding: 6rem;
   padding-left: 9rem;
   width: 60%;
