--- a/css/style.css
+++ b/css/style.css
@@ -290,6 +290,43 @@ body {
   .composition:hover .composition__image:not(:hover) {
     scale: 0.95; }
 
+.form__group:not(:last-child) {
+  margin-bottom: 2rem; }
+
+.form__input {
+  padding: 1.5rem 2rem;
+  font-size: 1.6rem;
+  font-weight: 400;
+  border: none;
+  display: block;
+  width: 90%;
+  border-radius: 2px;
+  border-bottom: 3px solid transparent;
+  font-family: inherit;
+  color: inherit;
+  background-color: rgba(255, 255, 255, 0.5); }
+  .form__input:focus {
+    outline: none;
+    border-bottom: 3px solid #7ed56f;
+    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.1); }
+    .form__input:focus:invalid {
+      border-bottom: 3px solid #ff7730; }
+  .form__input::-webkit-input-placeholder {
+    color: #999; }
+
+.form__label {
+  display: block;
+  margin-left: 2rem;
+  margin-top: .5rem;
+  font-size: 1.4rem;
+  font-weight: 700;
+  transition: all .5s; }
+
+.form__input:placeholder-shown + .form__label {
+  opacity: 0;
+  visibility: hidden;
+  transform: translateY(-4rem); }
+
 .feature-box {
   background-color: rgba(255, 255, 255, 0.8);
   text-align: center;
