--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -1,4 +1,5 @@
 .btn {
+  &,
   &:link,
   &:visited {
     font-size: $default-font-size;
@@ -8,6 +9,9 @@
     display: inline-block;
     border-radius: 10rem;
     transition: all 0.2s;
+
+    border: none;
+    cursor: pointer;
   }
 
   &:hover {
@@ -15,7 +19,9 @@
     box-shadow: 0 1rem 2rem rgba($color-black, 0.2);
   }
 
-  &:active {
+  &:active,
+  &:focus {
+    outline: none;
     transform: translateY(-0.1rem);
     box-shadow: 0 0.5rem 1rem rgba($color-black, 0.2);
   }
