--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -1,47 +1,90 @@
 .form {
-    &__group:not(:last-child) {
-        margin-bottom: 2rem;
-    }
-    &__input {
-        padding: 1.5rem 2rem;
-        font-size: $default-font-size;
-        font-weight: 400;
-        border: none;
-        display: block;
-        width: 90%;
-        border-radius: 2px;
-        border-bottom: 3px solid transparent;
-        font-family: inherit;
-        color: inherit;
-        background-color: rgba($color-white, 0.5);
-        
-        &:focus {
-            outline: none;
-            border-bottom: 3px solid $color-primary-light;
-            box-shadow: 0 1rem 2rem rgba($color-black, 0.1);
-            
-            &:invalid {
-                border-bottom: 3px solid $color-secondary-dark;
-            }
-        }
+  &__group:not(:last-child) {
+    margin-bottom: 2rem;
+  }
+  &__input {
+    padding: 1.5rem 2rem;
+    font-size: $default-font-size;
+    font-weight: 400;
+    border: none;
+    display: block;
+    width: 90%;
+    border-radius: 2px;
+    border-bottom: 3px solid transparent;
+    font-family: inherit;
+    color: inherit;
+    background-color: rgba($color-white, 0.5);
+    transition: all 0.3s;
 
-        &::-webkit-input-placeholder  {
-            color: #999;
-        }
+    &:focus {
+      outline: none;
+      border-bottom: 3px solid $color-primary-light;
+      box-shadow: 0 1rem 2rem rgba($color-black, 0.1);
+
+      &:invalid {
+        border-bottom: 3px solid $color-secondary-dark;
+      }
     }
 
-    &__label {
-        display: block;
-        margin-left: 2rem;
-        margin-top: .5rem;
-        font-size: 1.4rem;
-        font-weight: 700;
-        transition: all .5s;
+    &::-webkit-input-placeholder {
+      color: #999;
     }
+  }
 
-    &__input:placeholder-shown + &__label{
-        opacity: 0;
-        visibility: hidden;
-        transform: translateY(-4rem);
+  &__label {
+    display: block;
+    margin-left: 2rem;
+    margin-top: 0.5rem;
+    font-size: 1.4rem;
+    font-weight: 700;
+    transition: all 0.5s;
+  }
+
+  &__input:placeholder-shown + &__label {
+    opacity: 0;
+    visibility: hidden;
+    transform: translateY(-4rem);
+  }
+  &__radio-group {
+    font-size: $default-font-size;
+    display: inline-block;
+    width: 49%;
+  }
+
+  &__radio-label {
+    padding-left: 3rem;
+    position: relative;
+    cursor: pointer;
+  }
+  &__radio-button {
+    display: inline-block;
+    width: 3rem;
+    height: 3rem;
+    border: 0.5rem solid $color-primary-light;
+    border-radius: 50%;
+    position: absolute;
+    top: -0.5rem;
+    left: -0.7rem;
+
+    &::after {
+      content: "";
+      position: absolute;
+      width: 1.3rem;
+      height: 1.3rem;
+      display: block;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      border-radius: 50%;
+      background-color: $color-primary-light;
+      opacity: 0;
     }
+  }
+
+  &__radio-input {
+    display: none;
+  }
+  &__radio-input:checked ~ &__radio-label &__radio-button::after {
+    opacity: 1;
+  }
 }
