--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -9,6 +9,8 @@ $color-tertiary-light: #2998ff;
 $color-tertiary-dark: #5643fa;
 
 $color-grey-light: #f7f7f7;
+$color-grey-dark: #444;
+
 $color-grey: #777;
 $color-white: #fff;
 $color-black: #000;
